# The-AI-Housing-Scientist

./: .env.example  .gitignore  LICENSE  Part5.txt  Part5_GoogleDoc_draft.txt  Part5_GoogleDoc_draft_en.txt  README.md  docker-compose.yml  references.docx  references.txt  要件定義書.md
backend/: .coverage  Dockerfile  coverage.xml  pyproject.toml  requirements.txt
backend/app/: area_matching.py  catalog.py  config.py  db.py  llm_config.py  llm_config_manager.py  main.py  models.py  orchestrator.py  preflight.py  profile_memory.py
backend/app/llm/: __init__.py  anthropic_adapter.py  base.py  factory.py  observability.py  openai_compatible.py  utils.py
backend/app/orchestrator_modules/: __init__.py  actions.py  core.py  planning.py  presentation.py  research.py  shared.py
backend/app/research/: __init__.py  agent_manager.py  agent_manager_execution_mixin.py  agent_manager_summary_mixin.py  agent_manager_tooling_mixin.py  agent_manager_tree_mixin.py  agent_manager_types.py  journal.py  metric.py  offline_eval.py  state_machine.py  tools.py
backend/app/services/: __init__.py  brave_search.py  property_catalog.py  property_image.py
backend/tests/: test_brave_search.py  test_communication.py  test_config.py  test_final_report.py  test_integrity_review.py  test_llm_config_routing.py  test_llm_observability.py  test_llm_utils.py  test_offline_eval.py  test_openai_compatible.py  test_orchestrator.py  test_planner.py  test_prompt_examples.py  test_property_catalog.py  test_property_image_resolver.py  test_ranking.py  test_research_agent_manager.py  test_research_infrastructure.py  test_result_summarizer.py  test_risk_check.py  test_search_normalize.py
(+34 files in other folders)
